     minimally invasive to impact setting of those bits (or not) in the
     first place. [#2394]
   * `root`-owned daemons now use not the hard-coded `PIDPATH` value set
     by the `configure` script during build, but can override it with a
     `NUT_PIDPATH` environment variable in certain use-cases (such as
     tests). [#2407]
   * introduced a check for daemons working with PID files to double-check
     that if they can resolve the program name of a running process with
     this identifier, that such name matches the current program (avoid
     failures to start NUT daemons if PID files are on persistent storage,
     and some unrelated program got that PID after a reboot).  This might
     introduce regressions for heavily customized NUT builds (e.g. those
     embedded in NAS or similar devices) where binary file names differ
     significantly from a `progname` string defined in the respective NUT
     source file, so a boolean `NUT_IGNORE_CHECKPROCNAME` environment
     variable support was added to optionally disable this verification.
     Also the NUT daemons should request to double-check against their
     run-time process name (if it can be detected). [issue #2463]
   * introduced `m4` macros to check during `configure` phase for the
     platform, and a `nut_bool.h` header with `nut_bool_t` type to use
     during build, to avoid the numerous definitions of Boolean types
     and values (or macros) in the NUT codebase. [issue #1176, issue #31]
   * custom `distcheck-something` targets did not inherit `DISTCHECK_FLAGS`
     properly. [#2541]
   * added `status_get()` in NUT driver state API, to check if a status
     token string had been set recently, and to avoid duplicate settings.
     [PR #2565]
   * local socket/pipe protocol introduced a `LOGOUT` command for cleaner
     disconnection handling. [#2572]
   * codebase adapted to the liking of `clang-18` and newer revisions of