@@ -401,6 +401,8 @@ relocated into new `shutdown.default` INSTCMD definitions. [#2670]
      by the `configure` script during build, but can override it with a
      `NUT_PIDPATH` environment variable in certain use-cases (such as
      tests). [#2407]
+   * allow drivers to set `STATEPATH` via `ups.conf` to match `upsd`
+     custom configuration ability. [issue #694]
    * introduced a check for daemons working with PID files to double-check
      that if they can resolve the program name of a running process with
      this identifier, that such name matches the current program (avoid
